--- a/blogpost.html
+++ b/blogpost.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <div id="container">
-        <div id="post">
-            <h1>Este es el titulo atractivo e interesante del post</h1>
-            <p>Este es el párrafo de inicio donde vamos a explicar las cosas increibles <br>que se pueden hacer con ramas.</p>
-        </div>
+        <div id="cabecera">
+            cabecera
+            <div id="post">
+                <h1>Este es el titulo atractivo e interesante del post</h1>
+                <p>Este es el párrafo de inicio donde vamos a explicar las cosas increibles <br>que se pueden hacer con ramas.</p>
+            </div>
+        ></div>
     </div>
     
 </body>
