--- a/blogpost.html
+++ b/blogpost.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog post</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera
-            <div id="post">
-                <h1>Este es el titulo atractivo e interesante del post</h1>
-                <p>Este es el párrafo de inicio donde vamos a explicar las cosas increibles <br>que se pueden hacer con ramas.</p>
-            </div>
-        ></div>
+            Hyperblog <span id="tagline">Tu blog de confianza</span>
+        </div>
+        <div id="post">
+            <h1>Este es el titulo atractivo e interesante del post</h1>
+            <p>Este es el párrafo de inicio donde vamos a explicar las cosas increibles <br>que se pueden hacer con
+                ramas.</p>
+        </div>
+
     </div>
-    
+
 </body>
+
 </html>
